for GM homework

--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,7 +19,7 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=9,18
+Pos=31,26
 Size=262,223
 Collapsed=0
 
@@ -89,7 +89,12 @@ Size=278,225
 Collapsed=0
 
 [Window][Model 3]
-Pos=347,628
+Pos=57,589
 Size=278,196
+Collapsed=0
+
+[Window][model 4]
+Pos=1022,465
+Size=553,390
 Collapsed=0
 
