--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,7 +19,7 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=31,26
+Pos=4,155
 Size=262,223
 Collapsed=0
 
@@ -96,5 +96,10 @@ Collapsed=0
 [Window][model 4]
 Pos=1022,466
 Size=553,390
+Collapsed=0
+
+[Window][wall]
+Pos=48,437
+Size=328,251
 Collapsed=0
 
