--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,7 +19,7 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=113,53
+Pos=19,11
 Size=262,223
 Collapsed=0
 
@@ -104,7 +104,17 @@ Size=328,251
 Collapsed=0
 
 [Window][gobber]
-Pos=60,354
+Pos=19,244
 Size=413,391
+Collapsed=0
+
+[Window][Wall]
+Pos=753,16
+Size=245,209
+Collapsed=0
+
+[Window][Nano]
+Pos=314,11
+Size=417,263
 Collapsed=0
 
